--- a/src/app/components/favorites-pokes/favorites-pokes.component.html
+++ b/src/app/components/favorites-pokes/favorites-pokes.component.html
@@ -1,6 +1,6 @@
 <!-- title componenent -->
 <div class="flex justify-center mx-auto container">           
-    <h1 class="text-rose-500 font-bold text-3xl pb-10">Mis Pokemones Favoritos</h1>
+    <h1 class="blue-text font-bold text-3xl pb-10">Mis Pokemones Favoritos</h1>
 </div>
 <!-- Favorite Cards -->
 <div class="container mx-auto grid grid-cols-5" >
@@ -9,18 +9,21 @@
             </mat-card-title>
             <img mat-card-image [src]="favPoke.sprites.front_default" alt="Pokemon Image"> 
             <mat-card-subtitle>
-                <div class="flex justify-between"><span class="blue-text font-bold">Alias: </span> <fa-icon class="cursor-pointer" [icon]="faEdit"></fa-icon></div>
+                <div class="flex justify-between"><span class="blue-text font-bold">Alias: </span> <fa-icon (click)="openDialog()" (aliasEvent)="getAlias($event)" class="cursor-pointer" [icon]="faEdit"></fa-icon></div>
             </mat-card-subtitle>
             <mat-card-subtitle>
-                <span class="blue-text font-bold">CreatedAt:</span> {{ createdAt | date: 'dd-MM-YYYY' }}
+                <span class="blue-text font-bold">Agregado el:</span> {{ createdAt | date: 'dd-MM-YYYY' }}
                 </mat-card-subtitle>
             <mat-card-footer>      
                 <!-- Remove card from favorites ones  -->
                 <div class="delete-button flex justify-end">                                
-                    <button mat-icon-button color="accent" type="button">
+                    <button mat-icon-button color="accent" type="button" (click)="removePoke(favPoke)">
                         <mat-icon>delete</mat-icon>
                     </button>
                 </div>
             </mat-card-footer>
         </mat-card>
+</div>
+<div class="flex justify-center text-red-500 font-bold">    
+    <ng-container *ngIf="!favPokemons.length">No has agregado pokemones a favoritos.</ng-container>
 </div>
