--- a/src/app/components/poke-list/poke-list.component.html
+++ b/src/app/components/poke-list/poke-list.component.html
@@ -4,7 +4,7 @@
         <img mat-card-image [src]="poke.sprites.front_default" alt="Pokemon Image">  
         <mat-card-footer>            
             <div class="flex justify-center">            
-                <button mat-raised-button color="primary" (click)="addToFavorites(poke)">
+                <button mat-raised-button color="primary" type="button" (click)="addToFavorites(poke)">
                     Agregar a Favoritos
                 </button>
             </div>
