--- a/src/app/components/poke-list/poke-list.component.html
+++ b/src/app/components/poke-list/poke-list.component.html
@@ -22,7 +22,8 @@
     <mat-paginator  
         [length]="this.pokemons.length"
         [pageSize]="20"
-        [pageSizeOptions]="[20, 40,60, 80, 100]"
-        (page)="onPageChange($event)">
+        [pageSizeOptions]="[20, 40, 60, 80, 100] "
+        (page)="onPageChange($event)"
+        showFirstLastButtons>
     </mat-paginator>
 </div>
