--- a/src/app/components/favorites-pokes/dialog-content/dialog-content.component.html
+++ b/src/app/components/favorites-pokes/dialog-content/dialog-content.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>{{ data?.title }}</h2>
 <div mat-dialog-content>
-    <form [formGroup]="formControl" class="example-form"> 
+    <form [formGroup]="formControl" class="example-form" (ngSubmit)="addAlias(formControl)"> 
         <mat-form-field appearance="fill">
           <mat-label>Alias</mat-label>
           <input type="text" matInput formControlName="alias" placeholder="Agregar alias...">
